--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
             margin-top: 8%;
         }
         form {
-            width: 800px;
+            width-max: 800px;
             margin: 0 auto;
             display: flex;
             justify-content: center;
