--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@
         }
         .BigApartment {
             background-color: #a19090;
+            font-size: 12px;
         }
         .total-price {
             top: 10%;
