--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
             top: 0;
             z-index: 1;
             margin-top: 8%;
+            overflow: hidden;
         }
         form {
             margin: 0 auto;
