--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
             height: 40px;
             margin: 0;
             position: sticky;
-            top: 0;
+            top: 4%;
             z-index: 1;
             margin-top: 8%;
             overflow: hidden;
